Wed Jun  8 11:35:17 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: net cleanup

Wed Jun  8 11:25:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/Makefile.am src/apps/fisql/Makefile.am:
	* src/ctlib/Makefile.am src/ctlib/unittests/Makefile.am:
	* src/dblib/Makefile.am src/dblib/unittests/Makefile.am:
	* src/odbc/Makefile.am src/pool/Makefile.am src/server/Makefile.am:
	* src/tds/unittests/Makefile.am:
	- use LTLIBICONV instead of LIBICONV

Wed Jun  8 11:01:59 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: small dblib improve

Wed Jun  8 10:48:34 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: use TDS_OFFSET

Tue Jun  7 16:14:23 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0016_1.in src/dblib/unittests/t0016_1.sql:
	- add test for utf-8 encoding

Tue Jun  7 16:09:05 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/dblib/unittests/common.h:
	* src/dblib/unittests/t0016.c src/dblib/unittests/t0016.sql:
	- support more bcp tests

Tue Jun  7 16:07:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0016.c: compatibility update

Tue Jun  7 11:58:54 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ctutil.c src/dblib/dbutil.c:
	- add TDS_OFFSET macro

Tue Jun  7 10:46:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/dbutil.c:
	- fix some dblib result

Tue Jun  7 10:34:51 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: remove unused code

Tue Jun  7 10:16:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/dblib.h src/dblib/bcp.c src/dblib/dblib.c:
	* src/dblib/rpc.c:
	- add CHECK_CONN macro and use it

Tue Jun  7 10:10:55 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c src/dblib/rpc.c: more type conversions
